aws_vpc.tf
resource "aws_vpc" "kptboard" {
  cidr_block = "10.0.0.0/16"
  tags {
    Name = "${var.kptboard}"
  }
}
